<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_md">

        <!-- Meme Image -->
        <ImageView
            android:id="@+id/ivMeme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/meme_image_height"
            android:scaleType="centerCrop"
            android:contentDescription="@string/detail_content_desc_meme"
            android:background="@color/purple_200" />

        <!-- Title -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/detail_meme_title"
            android:textAppearance="@style/TextAppearance.App.HeadlineSmall"
            android:maxLines="2"
            android:ellipsize="end" />

        <!-- Author and Ups -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_by_author_placeholder"
                android:textAppearance="@style/TextAppearance.App.CaptionSecondary" />

            <TextView
                android:id="@+id/tvUps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meme_upvotes_placeholder"
                android:textAppearance="@style/TextAppearance.App.Label" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
